PCHR-2713: Move annual entitlement change log modal template to the view

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlements.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/annual-entitlements.html
@@ -42,3 +42,11 @@
     </div>
   </crm-loading>
 </div>
+
+<script type="text/ng-template" id="annual-entitlement-change-log-modal">
+  <annual-entitlement-change-log
+    contact-id="modal.contactId"
+    dismiss-modal="modal.dismiss()"
+    period-id="modal.periodId"
+  ></annual-entitlement-change-log>
+</script>
