PCHR-2714: Add calendar tooltip for accrued toil requests

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-day.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-day.html
@@ -61,3 +61,9 @@
     </p>
   </div>
 </script>
+<script type="text/ng-template" id="accrued-toil-tooltip">
+  <div>
+    <strong>{{day.contactData.leaveRequest['type_id.title']}}</strong>
+    <p>{{day.supportData.toilAmounts[day.contactData.leaveRequest.toil_to_accrue].label}}</p>
+  </div>
+</script>
