--- a/hrjobcontract/scss/civihr/partials/_datepicker.scss
+++ b/hrjobcontract/scss/civihr/partials/_datepicker.scss
@@ -24,6 +24,10 @@
         line-height: 1;
         width: auto !important;
 
+        &:hover,
+        &:active {
+          color: $btn-default-color;
+        }
         &:active {
           @include box-shadow(none);
         }
