--- a/hrjobcontract/views/contractList.html
+++ b/hrjobcontract/views/contractList.html
@@ -3,12 +3,12 @@
     <li class="{{prefix}}list-contract-item" hrjc-loader hrjc-loader-show="true" ng-class="{'ng-active': contractLoaded}" ng-repeat="contract in contractCurrent track by contract.id" ng-controller="ContractCtrl" ng-include src="'contract.html'"></li>
 </ul>
 
-<h3 class="header-bar header-bar-danger-light" ng-show="contractPast.length">Past Contracts:</h3>
+<h3 class="header-bar header-bar-danger" ng-show="contractPast.length">Past Contracts:</h3>
 <ul class="{{prefix}}list-contract">
     <li class="{{prefix}}list-contract-item" hrjc-loader hrjc-loader-show="true" ng-class="{'ng-active': contractLoaded}" ng-repeat="contract in contractPast track by contract.id" ng-controller="ContractCtrl" ng-include src="'contract.html'"></li>
 </ul>
 <p class="{{prefix}}btn-add-contract"  ng-class="{'ng-active': contractListLoaded}">
-    <button class="btn btn-default btn-primary" ng-click="modalContract('new')">
+    <button class="btn btn-primary" ng-click="modalContract('new')">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add New Job Contract
     </button>
 </p>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <button class="btn btn-default btn-danger" ng-click="delete(contract.id)">
+                            <button class="btn btn-danger" ng-click="delete(contract.id)">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete this job contract
                             </button>
                         </div>
