PCHR-2904: Display Leave Calendar legends for LinH types

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
@@ -17,7 +17,7 @@
             <span class="chr_leave-calendar__legend__label">{{absenceType.title}}</span>
           </div>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'days'">
           <div class="chr_leave-calendar__legend__entry">
             <div class="chr_leave-calendar__item"
                  ng-style="legend.getAbsenceTypeStyle(absenceType)"><span>AM</span>
@@ -31,6 +31,14 @@
             <span class="chr_leave-calendar__legend__label">{{absenceType.title}} PM Only</span>
           </div>
         </div>
+        <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'hours'">
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item"
+                 ng-style="legend.getAbsenceTypeStyle(absenceType)"><span>10:00</span>
+            </div>
+            <span class="chr_leave-calendar__legend__label">{{absenceType.title}} specific time</span>
+          </div>
+        </div>
         <div class="col-xs-6 col-md-3">
           <div class="chr_leave-calendar__legend__entry">
             <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
@@ -38,7 +46,7 @@
             <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}}</span>
           </div>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'days'">
           <div class="chr_leave-calendar__legend__entry">
             <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
                ng-style="legend.getAbsenceTypeStyle(absenceType)"><span>AM</span>
@@ -50,6 +58,14 @@
                ng-style="legend.getAbsenceTypeStyle(absenceType)"><span>PM</span>
             </div>
             <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}} PM</span>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'hours'">
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
+               ng-style="legend.getAbsenceTypeStyle(absenceType)"><span>10:00</span>
+            </div>
+            <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}} specific time</span>
           </div>
         </div>
       </div>
