--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
@@ -10,7 +10,7 @@
   <div class="panel-collapse" uib-collapse="legend.legendCollapsed">
     <div class="panel-body chr_leave-calendar__legend" ng-show="!legend.legendCollapsed">
       <div class="row" ng-repeat-start="absenceType in legend.absenceTypes">
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'days'">
           <div class="chr_leave-calendar__legend__entry">
             <div class="chr_leave-calendar__item"
                ng-style="legend.getAbsenceTypeStyle(absenceType)"></div>
@@ -39,7 +39,7 @@
             <span class="chr_leave-calendar__legend__label">{{absenceType.title}} specific time</span>
           </div>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'days'">
           <div class="chr_leave-calendar__legend__entry">
             <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
                ng-style="legend.getAbsenceTypeStyle(absenceType)"></div>
