PCHR-2904: Align time unit label for absence type legends

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
@@ -34,7 +34,8 @@
         <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'hours'">
           <div class="chr_leave-calendar__legend__entry">
             <div class="chr_leave-calendar__item"
-                 ng-style="legend.getAbsenceTypeStyle(absenceType)"><span>10:00</span>
+                 ng-style="legend.getAbsenceTypeStyle(absenceType)">
+              <span class="chr_leave-calendar__time-unit">10:00</span>
             </div>
             <span class="chr_leave-calendar__legend__label">{{absenceType.title}} specific time</span>
           </div>
@@ -63,7 +64,8 @@
         <div class="col-xs-6 col-md-3" ng-if="absenceType.calculation_unit_name === 'hours'">
           <div class="chr_leave-calendar__legend__entry">
             <div class="chr_leave-calendar__item chr_leave-calendar__item--requested"
-               ng-style="legend.getAbsenceTypeStyle(absenceType)"><span>10:00</span>
+               ng-style="legend.getAbsenceTypeStyle(absenceType)">
+              <span class="chr_leave-calendar__time-unit">10:00</span>
             </div>
             <span class="chr_leave-calendar__legend__label">Requested {{absenceType.title}} specific time</span>
           </div>
