--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
@@ -54,6 +54,12 @@ $chr-leave-calendar-legend-size:                  20px;
     height: 1.2em;
   }
 
+  > .chr_leave-calendar__time-unit {
+    font-size: 7px;
+    height: 1em;
+    margin-left: -1px;
+  }
+
   > a {
     cursor: pointer;
     @include absolute-centered();
