PCHR-2683: Hide unentitled absence types

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-absence-types-available-balance.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-widget/leave-widget-absence-types-available-balance.html
@@ -15,8 +15,8 @@
     </thead>
     <tbody>
       <tr ng-repeat="type in leaveWidgetBalance.absenceTypeEntitlements">
-        <td class="leave-widget__types-name">{{type.title}}</td>
-        <td class="leave-widget__types-balance">{{type.balance | timeUnitApplier:'days'}}</td>
+        <td class="leave-widget__types-name">{{type.absenceType.title}}</td>
+        <td class="leave-widget__types-balance">{{type.entitlement.balance | timeUnitApplier:'days'}}</td>
       </tr>
     </tbody>
   </table>
