--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/common.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/common.html
@@ -28,7 +28,7 @@
       <label class="col-sm-4 control-label required-mark">
         From Date{{ detailsTab.selectedAbsenceType.calculation_unit_name === 'hours' && !detailsTab.isLeaveType('toil') ? '/Time' : ''}}
       </label>
-      <div class="col-xs-6 col-sm-4 chr_leave-request-date-picker-container">
+      <div class="col-sm-4 chr_leave-request-date-picker-container">
         <div class="input-group">
           <input
             type="text"
@@ -43,7 +43,7 @@
             ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.fromDate, 'from')"/>
         </div>
       </div>
-      <div class="col-xs-6 col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
+      <div class="col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
         <crm-loading
           show="!detailsTab.loading.fromDayTypes"
           class="chr_leave-request-modal__small_spinner"
@@ -84,7 +84,7 @@
   <div class="col-xs-12 form-horizontal">
     <div class="form-group">
       <label class="col-sm-4 control-label required-mark">Deduction</label>
-      <div class="col-xs-6 col-sm-4">
+      <div class="col-sm-4">
         <time-amount-picker
           time-amount-picker-disabled="!detailsTab.uiOptions.times.from.maxAmount || __isNotEditable"
           time-amount-picker-value="detailsTab.uiOptions.times.from.amount"
@@ -103,7 +103,7 @@
         <label class="col-sm-4 control-label required-mark">
           To Date{{ detailsTab.selectedAbsenceType.calculation_unit_name === 'hours' && !detailsTab.isLeaveType('toil') ? '/Time' : ''}}
         </label>
-        <div class="col-xs-6 col-sm-4 chr_leave-request-date-picker-container">
+        <div class="col-sm-4 chr_leave-request-date-picker-container">
           <div class="input-group">
             <input
               type="text"
@@ -118,7 +118,7 @@
               ng-change="detailsTab.updateAbsencePeriodDatesTypes(detailsTab.uiOptions.toDate, 'to')"/>
           </div>
         </div>
-        <div class="col-xs-6 col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
+        <div class="col-sm-4" ng-hide="detailsTab.isLeaveType('toil')">
           <crm-loading
             ng-if="detailsTab.selectedAbsenceType.calculation_unit_name === 'days'"
             show="!detailsTab.loading.toDayTypes"
@@ -159,7 +159,7 @@
     <div class="col-xs-12 form-horizontal">
       <div class="form-group">
         <label class="col-sm-4 control-label required-mark">Deduction</label>
-        <div class="col-xs-6 col-sm-4">
+        <div class="col-sm-4">
           <time-amount-picker
             time-amount-picker-disabled="!detailsTab.uiOptions.times.to.maxAmount || __isNotEditable"
             time-amount-picker-value="detailsTab.uiOptions.times.to.amount"
