--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/toil.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/toil.html
@@ -3,7 +3,7 @@
   <div class="col-xs-12 form-horizontal">
     <div class="row">
       <label class="col-sm-4 control-label required-mark">Duration</label>
-      <div class="col-xs-6 col-sm-4 chr_leave-request-modal__input-shift-left">
+      <div class="col-sm-4 chr_leave-request-modal__input-shift-left">
         <div class="crm_custom-select crm_custom-select--full">
           <select name="hours" ng-model="detailsTab.request.toilDurationHours"
             class="no-select2"
@@ -26,7 +26,7 @@
           <span class="crm_custom-select__arrow"></span>
         </div>
       </div>
-      <div class="col-xs-6 col-sm-4">
+      <div class="col-sm-4">
         <div class="crm_custom-select crm_custom-select--full">
           <select name="minutes" ng-model="detailsTab.request.toilDurationMinutes"
             class="no-select2"
