PCHR-2879: Remove border in the datepicker selector

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-request-modal.scss
@@ -164,5 +164,6 @@ $row-margin-bottom: 15px;
     background-color: inherit !important;
     color: inherit !important;
     cursor: pointer !important;
+    border-right: none;
   }
 }
