PCHR-2879: Add a necessary class to the directive

--- a/org.civicrm.reqangular/src/common/templates/time-amount-picker.html
+++ b/org.civicrm.reqangular/src/common/templates/time-amount-picker.html
@@ -1,4 +1,4 @@
-<div class="time-amount-picker">
+<div class="time-amount-picker crm_custom-select">
   <select class="no-select2" ng-model="picker.selectedHours"
     ng-disabled="picker.disabled"
     ng-change="picker.buildMinutesOptions(); picker.calculateSelectedValue();">
