PCHR-2879: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
@@ -6,6 +6,7 @@
   @import "base/helpers/*";
   @import "overrides/style/*";
   @import "components/*";
+  @import "directives/*";
   @import "pages/*";
 }
 
